--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^19.2.4",
     "lucide-react": "^0.563.0",
     "react-dom": "^19.2.4",
-    "@google/genai": "^1.39.0"
+    "@google/generative-ai": "^0.21.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
